# ibos-cijfertracking

./: .gitignore  ASSESSMENT.md  DESIGN.md  PROCESS.md  README.md  REVIEW.md  pyproject.toml  requirements.txt
app/: application.py  models.py  populate_db.py  requirements.txt
app/templates/: 404.html  contact.html  course.html  index.html  layout.html  login.html  portal-parent.html  portal-student.html  portal-tutor.html  portal.html  signup.html
migrations_old/versions/: 16194ccc7e82_changed_the_date_in_mean_and_the_.py  1a164890a629_changed_type_of_name_in_course_from_.py  1ec35986eb31_removed_date_column_from_all_mean_tables.py  279a6e5fb69b_removed_fk_gradeid_from_typemean_since_.py  2ecd042dca4e_added_a_mean_table.py  5c85e319ea9d_changed_the_date_in_mean_and_the_.py  6ccfb4e28c2d_added_two_more_columns_to_the_family_.py  6fdcbef6aff4_changed_dateadded_to_date_in_the_grade_.py  73d23f41b65b_changed_the_date_in_mean_and_the_.py  7d35c2fe4071_added_all_tables_from_preliminary_.py  88d80d3a813c_deleted_student_mean_i_gave_up_on_it.py  92616a711c9a_changed_type_of_name_in_course_from_.py  95cdc5637b13_added_a_grade_fk_to_all_mean_tables_and_.py  9f01e72f64fd_changed_table_name_overallmean_to_.py  a0053959c5d0_changed_the_date_in_mean_and_the_.py  ad95fdb68ab7_changed_type_of_name_in_course_from_.py  b36ca4169556_added_a_pending_option_to_the_family_.py  c87934d760a4_changed_naming_from_dateupdates_to_.py  dc68835c3e22_added_a_table_for_overall_means.py  df31d9ae6b6a_removed_mean_column_from_users_and_also_.py  fe74895c8dde_changed_the_name_property_in_course_.py
(+14 files in other folders)
