[project]
name = "ibos-cijfertracking"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandre Lopez",email = "alexxandre.lopez@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask",
    "flask-session",
    "sqlalchemy",
    "flask-migrate",
    "flask-admin",
    "flask-login",
    "numpy (>=2.3.2,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
